# Zenon

./: .gitignore  README.md  build_env.txt  docker-compose.yml  host_env.txt
backend/: Dockerfile  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: words.py
backend/app/cruds/: sandbox.py  words.py  words_mock.py
backend/app/models/: words.py
backend/app/schemas/: words.py
backend/app/utils/: Dockerfile.browsersync-for-dev  dependencies.py
dagster/: Dockerfile  dagster.yaml  repo.py
database/: Dockerfile  entrypoint.sh  init.sql
etl/: Dockerfile  README.md  fly.toml  main.py  pyproject.toml  start_dagster.sh
etl/etl/: __init__.py
etl/etl/assets/: extract.py  load.py  transform.py
etl/etl/assets/extract/: extract.py
etl/etl/assets/inspect/: inspect.py
etl/etl/assets/load/: load.py
etl/etl/assets/transform/: ___garbages_not_used.py  add_all_missing_tags.py  dataframe_to_records.py  fill_mtags.py  filter_and_obtain_df.py  get_flattened_forms_df.py  get_glosses.py  get_json_from_df.py  make_side_header.py  make_top_header.py  map_by_tag.py  nest_forms.py  start_and_end_of_df_processing.py
etl/etl_scripts/: extract.py  load.py  transform.py
etl/etl_tests/: test_all_missing_tags.py  test_fill_mtags.py  test_make_top_header.py  test_map_by_tag.py
etl/schedules/: schedules.db
etl_old/: Dockerfile  main.py
etl_sandbox/: README.md  fill_mtags.py  map_by_tag.py  nest_tags.py  test_fill_mtags.py  test_map_by_tag.py  test_nest_tags.py
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js
(+19 files in other folders)
