[tool.poetry]
name = "zenon-backend"
version = "0.1.0"
description = "Backend for declension and conjugation dictionary Zenon"
authors = ["Tatz <tatsuya884.0201@gmail.com>"]
readme = "README.md"
packages = [{include = "zenon_backend"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
asyncpg = "^0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
